Thu Dec 20 10:32:56 GMT 2001  Richard Boulton <richard@tartarus.org>

	* Fix a couple of misquoted messages in configure.in.

Tue Dec 18 23:22:00 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Use xapian.org where appropriate in documentation references

Tue Dec 18 14:32:32 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Use xapian.org not sourceforge for schemas

Mon Dec 17 18:47:08 GMT 2001  Olly Betts <olly@survex.com>

	* Cured problems with string('x') caused by overzealous search
	  and replace on my part.

Mon Dec 17 16:44:31 GMT 2001  Olly Betts <olly@survex.com>

	* Improved matches_estimated when a percent_cutoff is in effect.

Sun Dec 16 18:09:28 GMT 2001  Olly Betts <olly@survex.com>

	* You can now register a match decider functor by name with an
	  OmEnquire object.  It's not yet used for anything though.

Sun Dec 16 17:31:08 GMT 2001  Olly Betts <olly@survex.com>

	* omtcpsrv: simplified arguments - just list database directories and
	  they'll be opened with the auto backend.  Removed --im as it didn't
	  work as advertised and nobody's noticed (as actually implemented it
	  was useless).

Sat Dec 15 14:10:32 GMT 2001  Olly Betts <olly@survex.com>

	* Minor update to todo.xml. 

Sat Dec 15 13:43:47 GMT 2001  Olly Betts <olly@survex.com>

	* More fettling of OmBiasFunctor stuff - still not ready for use yet...

Tue Dec 11 13:06:08 GMT 2001  Olly Betts <olly@survex.com>

	* Don't work out probabilistic weights for boolean bits of the query
	  (rhs of FILTER and AND_NOT) which fixes incorrect percentage weights
	  in filtered queries.

Tue Dec 11 12:26:44 GMT 2001  Olly Betts <olly@survex.com>

	* Added test singlesubq1 to keep an eye on can_replace_by_single_subq.

Mon Dec 10 16:58:21 GMT 2001  Olly Betts <olly@survex.com>

	* can_replace_by_single_subq shouldn't return true for OP_ELITE_SET
	  since you can't call set_elite_set_size() on an arbitrary subquery.

Thu Dec  6 15:02:05 GMT 2001  Richard Boulton <richard@tartarus.org>
